# fds2

./: .gitignore  01_intro.qmd  02_organize.qmd  03_types.qmd  04_graphics.qmd  05_group.qmd  06_window.qmd  07_graphics_ii.qmd  08_combine.qmd  09_restructure.qmd  10_collect.qmd  11_spatial_data.qmd  12_apis.qmd  13_temporal_data.qmd  14_text_annotations.qmd  15_text_vectors.qmd  16_network_data.qmd  17_image_data.qmd  _quarto.yml  custom.scss  funs.py  index.qmd  main.py  pyproject.toml  qmd_to_ipynb.py  refs.bib  update.py
data/: birds_1000.csv  cities.csv  cities_messy.csv  countries.csv  countries_borders.csv  countries_cellphone.csv  countries_cities.csv  criterion.csv  emed_characters.csv  emed_lines.csv  emed_plays.csv  emnist_10000.csv  fashionmnist_10000.csv  france_departement_gdp.csv  fsac.csv  fsac_export.csv  inference_speed_sex_height.csv  it_cities.csv  it_province_covid.csv  mnist_1000.csv  movies_50_years.csv  movies_50_years_people.csv  paris_metro_stops.csv  shakespeare_characters.csv  shakespeare_plays.csv  us_city_population.csv  wiki_senator_class.csv  wiki_senator_class_docs.csv  wweia_demo.csv
docs/: 01_intro.html  02_organize.html  02_types.html  03_organize.html  03_types.html  04_graphics.html  05_group.html  06_window.html  07_graphics_ii.html  08_combine.html  09_restructure.html  10_collect.html  11_spatial_data.html  12_apis.html  13_temporal_data.html  13_text_annotations.html  14_text_annotations.html  14_text_vectors.html  15_network_data.html  15_text_vectors.html  16_image_data.html  16_network_data.html  17_image_data.html  (+2 more)
(+1209 files in other folders)
