[project]
name = "fds2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "folium>=0.20.0",
    "geopandas>=1.1.4",
    "igraph>=1.0.0",
    "mapclassify>=2.10.0",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "opencv-python>=5.0.0.93",
    "plotnine>=0.15.7",
    "polars>=1.42.1",
    "protobuf>=7.35.1",
    "pyarrow>=25.0.0",
    "pyyaml>=6.0.3",
    "requests-cache>=1.3.3",
    "scikit-learn>=1.9.0",
    "sentencepiece>=0.2.2",
    "spacy>=3.8.14",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.13.1",
    "umap-learn>=0.5.12",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
